// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JournalEntry GraphQL server Should create 5 User 1 Journal 1 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "1",
        "text": "User1 Inkling1 Journal1",
        "timeId": 1684220400000,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling2 Journal1",
        "timeId": 1684220400001,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling3 Journal1",
        "timeId": 1684220400002,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling4 Journal1",
        "timeId": 1684220400003,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling5 Journal1",
        "timeId": 1684220400004,
      },
    ],
  },
}
`;

exports[`JournalEntry GraphQL server Should create 5 User 1 Journal 2 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "2",
        "text": "User1 Inkling6 Journal2",
        "timeId": 1684220410000,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling7 Journal2",
        "timeId": 1684220410001,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling3 Journal2",
        "timeId": 1684220410002,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling9 Journal2",
        "timeId": 1684220410003,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling10 Journal2",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`JournalEntry GraphQL server Should create 5 User 2 Journal 3 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "3",
        "text": "User2 Inkling1 Journal3",
        "timeId": 1684220410000,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling2 Journal3",
        "timeId": 1684220410001,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling3 Journal3",
        "timeId": 1684220410002,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling4 Journal3",
        "timeId": 1684220410003,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling5 Journal3",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`JournalEntry GraphQL server Should create 5 more User 1 Journal 1 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "1",
        "text": "User1 Inkling6 Journal1",
        "timeId": 1684220410000,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling7 Journal1",
        "timeId": 1684220410001,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling8 Journal1",
        "timeId": 1684220410002,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling9 Journal1",
        "timeId": 1684220410003,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling10 Journal1",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`JournalEntry GraphQL server Should create User 1 Journal 1 1`] = `
{
  "data": {
    "createJournal": {
      "id": "1",
      "name": "1",
      "userId": "1",
    },
  },
}
`;

exports[`JournalEntry GraphQL server Should create User 1 Journal 2 1`] = `
{
  "data": {
    "createJournal": {
      "id": "2",
      "name": "2",
      "userId": "1",
    },
  },
}
`;

exports[`JournalEntry GraphQL server Should create User 1 Journal 3 1`] = `
{
  "data": {
    "createJournal": {
      "id": "3",
      "name": "3",
      "userId": "2",
    },
  },
}
`;

exports[`JournalEntry GraphQL server Should fail to get User 1 Journal 1 Thoughts 1`] = `
{
  "data": {
    "thoughts": [],
  },
}
`;

exports[`JournalEntry GraphQL server Should get User 1 Journal 1 Thoughts 1 - 5 1`] = `
{
  "data": {
    "thoughts": [
      {
        "journalId": "1",
        "text": "User1 Inkling1 Journal1",
        "timeId": 1684220400000,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling2 Journal1",
        "timeId": 1684220400001,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling3 Journal1",
        "timeId": 1684220400002,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling4 Journal1",
        "timeId": 1684220400003,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling5 Journal1",
        "timeId": 1684220400004,
      },
    ],
  },
}
`;

exports[`JournalEntry GraphQL server Should get User 1 Journal 1 Thoughts 5 - 10 1`] = `
{
  "data": {
    "thoughts": [
      {
        "journalId": "1",
        "text": "User1 Inkling6 Journal1",
        "timeId": 1684220410000,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling7 Journal1",
        "timeId": 1684220410001,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling8 Journal1",
        "timeId": 1684220410002,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling9 Journal1",
        "timeId": 1684220410003,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling10 Journal1",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`JournalEntry GraphQL server Should get User 1 Journal 1 Thoughts only 1 - 2 1`] = `
{
  "data": {
    "thoughts": [
      {
        "journalId": "1",
        "text": "User1 Inkling1 Journal1",
        "timeId": 1684220400000,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling2 Journal1",
        "timeId": 1684220400001,
      },
    ],
  },
}
`;

exports[`JournalEntry GraphQL server Should get User 1 Journal 1 Thoughts only 4 - 5 1`] = `
{
  "data": {
    "thoughts": [
      {
        "journalId": "1",
        "text": "User1 Inkling9 Journal1",
        "timeId": 1684220410003,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling10 Journal1",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`JournalEntry GraphQL server Should get User 1 Journal 2 Thoughts 1 - 5 1`] = `
{
  "data": {
    "thoughts": [
      {
        "journalId": "2",
        "text": "User1 Inkling6 Journal2",
        "timeId": 1684220410000,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling7 Journal2",
        "timeId": 1684220410001,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling3 Journal2",
        "timeId": 1684220410002,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling9 Journal2",
        "timeId": 1684220410003,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling10 Journal2",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`JournalEntry GraphQL server Should get User 1 Journal 2 Thoughts only 1 - 2 1`] = `
{
  "data": {
    "thoughts": [
      {
        "journalId": "2",
        "text": "User1 Inkling6 Journal2",
        "timeId": 1684220410000,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling7 Journal2",
        "timeId": 1684220410001,
      },
    ],
  },
}
`;

exports[`JournalEntry GraphQL server Should get User 2 Journal 3 Thoughts 1 - 5 1`] = `
{
  "data": {
    "thoughts": [
      {
        "journalId": "3",
        "text": "User2 Inkling1 Journal3",
        "timeId": 1684220410000,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling2 Journal3",
        "timeId": 1684220410001,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling3 Journal3",
        "timeId": 1684220410002,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling4 Journal3",
        "timeId": 1684220410003,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling5 Journal3",
        "timeId": 1684220410004,
      },
    ],
  },
}
`;

exports[`JournalEntry GraphQL server Should get User 2 Journal 3 Thoughts only 1 - 2 1`] = `
{
  "data": {
    "thoughts": [
      {
        "journalId": "3",
        "text": "User2 Inkling1 Journal3",
        "timeId": 1684220410000,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling2 Journal3",
        "timeId": 1684220410001,
      },
    ],
  },
}
`;
